# lambda-python-template

./: .bandit  .flake8  .gitignore  .pre-commit-config.yaml  .tflint.hcl  ENHANCEMENTS.md  README.md  SERVERLESS_TF_COMPLIANCE.md  Taskfile.yml  mypy.ini  openapi.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
scripts/: build.py  generate_openapi.py
src/: __init__.py
src/health/: lambda_function.py
src/hello/: lambda_function.py  test_lambda_function.py
src/orders/: lambda_function.py
src/orders_events/: lambda_function.py
src/service/: __init__.py
src/service/dal/: __init__.py  db_handler.py  dynamodb_handler.py
src/service/events/: __init__.py  event_handler.py  event_publisher.py  event_schemas.py  event_sourcing.py
src/service/handlers/: __init__.py  advanced_orders_handler.py  orders_handler.py
src/service/handlers/models/: dynamic_configuration.py  env_vars.py
src/service/handlers/utils/: dynamic_configuration.py  idempotency.py  observability.py  rest_api_resolver.py
src/service/logic/: __init__.py  order_service.py
src/service/models/: __init__.py  input.py  order.py  output.py
src/service/security/: __init__.py  auth.py  input_validator.py  rate_limiter.py  secrets_manager.py  security_headers.py
src/users/: lambda_function.py  requirements.txt  test_lambda_function.py
terraform/: _providers.tf  api-gateway-rest.tf  api-gateway.tf  dynamodb.tf  eventbridge.tf  kinesis.tf  lambda-functions.tf  locals.tf  monitoring.tf  outputs.tf  performance.tf  security.tf  serverless.tf  variables.tf
terraform/sql/: order_analytics.sql
tests/: conftest.py
tests/benchmark/: test_order_performance.py  test_performance.py
tests/e2e/: test_api.py
tests/integration/: test_dal.py
tests/unit/: test_models.py
